# vpp-api

./: Cargo.toml
vpp-api-encoding/: Cargo.toml
vpp-api-gen/: Cargo.toml
vpp-api-macros/: Cargo.toml
vpp-api-macros/src/: lib.rs
vpp-api-message/src/: lib.rs
vpp-api-transport/: Cargo.toml
vpp-api-transport/examples/: client.rs  tokio.rs
vpp-api-transport/src/: client.rs  connection.rs  lib.rs  transport.rs
vpp-api-transport/src/afunix/: mod.rs
vpp-api-transport/src/mux/: mod.rs
vpp-api-transport/src/shmem/: mod.rs
vpp-api-transport/src/tokio/: client.rs
