[package]
name = "vpp-api-encoding"
version = "0.1.0"
authors = ["Andrew Yourtchenko <ayourtch@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]

[dependencies]
serde.workspace = true
log.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
minreq.workspace = true
clap.workspace = true
typenum.workspace = true
generic-array.workspace = true
bincode.workspace = true
serde_repr.workspace = true
