[package]
name = "vpp-api-gen"
version = "0.1.0"
authors = ["Andrew Yourtchenko <ayourtch@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
trybuild.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
strum.workspace = true
strum_macros.workspace = true
log.workspace = true
env_logger.workspace = true
linked-hash-map.workspace = true
convert_case.workspace = true
serde_repr.workspace = true
typenum.workspace = true
bincode.workspace = true
serde_yaml.workspace = true
lazy_static.workspace = true
regex.workspace = true
syn.workspace = true
quote.workspace = true
proc-macro2 = "1.0.26"
