[package]
name = "vpp-api-macros"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/progress.rs"

[dev-dependencies]
trybuild.workspace = true
vpp-api-encoding.workspace = true
vpp-api-message.workspace = true
generic-array.workspace = true
typenum.workspace = true
serde.workspace = true
bincode.workspace = true



[dependencies]
syn.workspace = true
quote.workspace = true
proc-macro2.workspace = true
