[package]
name = "vpp-api-transport"
version = "0.1.6"
authors = ["Andrew Yourtchenko <ayourtch@gmail.com>"]
edition = "2018"
description = "fd.io VPP API transport over shared memory and sockets"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ayourtch/vpp-api-transport"
homepage = "https://wiki.fd.io/view/VPP"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "vpp_api_transport"
path = "src/lib.rs"

[[example]]
name = "vpp-api-transport-test"

[dependencies]
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.2.1"
vpp-api-message = {path = "../vpp-api-message" }
log = "0.4.14"

tokio-tower= {version="0.5" }
tokio={ version = "1.5.0", features = ["full"] }
async-trait = "0.1.50"
tokio-stream={ version = "0.1.5", features = ["sync", "net"] }
futures= { version = "0.3.14", features = ["async-await", "std"] }
tower= { version = "0.4.6", features = ["full", "spawn-ready"] }
bytes = "1.0.1"
futures-sink = "0.3.14"
futures-util = "0.3.14"
tokio-util = { version = "0.6.6", features = ["codec"] }
pin-project = "1.0.7"

[dev-dependencies]
serde_json = "1.0"
serde_yaml = "0.8"
clap = { version = "3.0.0", features = [ "derive" ] }
latest_vpp_api = { git = "https://github.com/ayourtch/latest-vpp-api", branch="main" }

[build-dependencies]
bindgen = "0.57.0"
