[package]
name = "vpp-api-transport"
version = "0.1.6"
authors = ["Andrew Yourtchenko <ayourtch@gmail.com>"]
edition = "2018"
description = "fd.io VPP API transport over shared memory and sockets"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ayourtch/vpp-api-transport"
homepage = "https://wiki.fd.io/view/VPP"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "vpp_api_transport"
path = "src/lib.rs"

[[example]]
name = "vpp-api-transport-test"

[dependencies]
lazy_static.workspace = true
serde.workspace = true
bincode.workspace = true
vpp-api-message.workspace = true
log.workspace = true

[dev-dependencies]
serde_json.workspace = true
serde_yaml.workspace = true
clap.workspace = true

[build-dependencies]
bindgen = "0.63.0"
